--- a/css/scss/_variables.scss
+++ b/css/scss/_variables.scss
@@ -25,8 +25,10 @@ $weights: (
   semi-bold: 600
 );
 
-@mixin font($size, $weight) {
+@mixin font($size, $weight, $color: inherit) {
   $weight-value: map-get($weights, $weight);
+
+  color: $color;
   font-size: to-rem($size);
   font-weight: $weight-value;
 }
