--- a/css/scss/_main.scss
+++ b/css/scss/_main.scss
@@ -1,10 +1,15 @@
 .main {
   background: url('../images/bg-header-mobile.png') no-repeat center center;
   background-size: cover;
-  padding-bottom: to-rem(120);
-  padding-top: to-rem(120);
-}
+  @include padding-heigth(120, 60);
 
-.main__logo {
-  margin: 0 auto;
+  @include breakpoint(large) {
+    background-image: url('../images/bg-header-desktop.png');
+    background-size: contain;
+    background-position: 0 0;
+  }
+
+  &__logo {
+    margin: 0 auto;
+  }
 }
